Larger width prevents Pause from wrapping.

--- a/skin/styl/janus.styl
+++ b/skin/styl/janus.styl
@@ -56,6 +56,7 @@
 			display block
 			font-size 10px
 			opacity 1
+			width 50px
 
 			&:before
 				content "Pause"
